...
            android:id="@+id/groupNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter a group name"
            android:textSize="28sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/grpNameTextview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="26sp"
            />

        <EditText
...
            app:layout_constraintBottom_toTopOf="@+id/mgListview"
            app:layout_goneMarginBottom="10dp"
            android:layout_marginLeft="24dp"
            />

        <Button
            android:id="@+id/mgDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="69dp"
            app:layout_constraintLeft_toRightOf="@+id/grpNameTextview"
...
