<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--to change later-->

    <Button
        android:id="@+id/gvMakeGroupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:height="30dp"
        android:text="Create New Group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#ffffdba2"/>

    <ListView
        android:id="@+id/groupViewList"
        app:layout_constraintTop_toBottomOf="@+id/gvMakeGroupButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:layout_width="344dp"
        android:layout_height="495dp" />

</android.support.constraint.ConstraintLayout>
